--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tracio.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tracio.io",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,14 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-motion": "^0.5.2",
+    "react-svg-line-chart": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "17.0.16",
+    "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
 }
