--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "tracio.io",
-  "type": "module",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://tracio.io",
@@ -14,7 +13,9 @@
   "dependencies": {
     "@headlessui/react": "^1.4.0",
     "aws-sdk": "^2.968.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.0.1",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-motion": "^0.5.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@aws-cdk/aws-dynamodb": "^1.118.0",
     "@aws-cdk/core": "^1.118.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/react": "17.0.16",
     "autoprefixer": "^10.3.1",
     "aws-cdk": "^1.118.0",
