--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "next build",
     "cdk:deploy": "cdk deploy",
+    "cdk:verify": "cdk synth",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
