--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-motion": "^0.5.2",
-    "react-svg-line-chart": "^2.0.2"
+    "react-svg-line-chart": "^2.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@aws-cdk/aws-dynamodb": "^1.118.0",
