--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
     "aws-sdk": "^2.968.0",
     "jsonwebtoken": "^8.5.1",
     "next": "11.0.1",
